[gd_scene load_steps=7 format=3 uid="uid://cbrx34haw6o38"]

[ext_resource type="Script" path="res://Stuff/Units/BaseUnit.gd" id="1_o1qlf"]
[ext_resource type="Script" path="res://Stuff/Units/SpriteController.gd" id="2_2bc0c"]
[ext_resource type="Script" path="res://Stuff/Units/StatManager.gd" id="2_ainkx"]
[ext_resource type="Script" path="res://Stuff/Units/UnitController.gd" id="2_u0dgc"]
[ext_resource type="Script" path="res://Stuff/Units/StanceController.gd" id="3_u81fm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_acotp"]
radius = 30.0

[node name="BaseUnit" type="CharacterBody2D"]
collision_layer = 0
motion_mode = 1
wall_min_slide_angle = 3.14159
script = ExtResource("1_o1qlf")

[node name="SpriteController" type="Node2D" parent="."]
script = ExtResource("2_2bc0c")

[node name="Sprite" type="Node2D" parent="SpriteController"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteController"]

[node name="StatManager" type="Node" parent="."]
script = ExtResource("2_ainkx")

[node name="Passives" type="Node" parent="StatManager"]

[node name="UnitController" type="Node" parent="."]
script = ExtResource("2_u0dgc")

[node name="StanceController" type="Node" parent="."]
script = ExtResource("3_u81fm")

[node name="Actions" type="Node" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_acotp")
